# taksim

./: LICENSE.md  README.md  main.py  pyproject.toml
app/utils/: add_certbot_certs.py  add_nginx_config.py  check_sudo.py  is_certbot_installed.py  is_nginx_installed.py  restart_nginx.py  test_nginx.py
